# NOVA-SCHOOL

./: .gitignore  CHANGELOG.md  README.md  __main__.py  ai_service.py  analysis_archive_builder.py  archive_utils.py  auth.py  code_runner.py  codedump_tools.py  config.py  curriculum.py  database.py  distribution_builder.py  documentation.md  embedded_nova.py  material_studio.py  mentor.py  nova_bootstrap.py  nova_bridge.py  nova_launch.py  nova_product_docs.py  nova_test_launch.py  nova_worker_launch.py  permissions.py  pyproject.toml  realtime.py  requirements.txt  run_tests.ps1  run_tests.sh  seed.py  server.py  server_config.json.example  start_server.ps1  start_server.sh  start_worker.ps1  start_worker.sh  templates.py  user_admin.py  virtual_lecturer.py  (+4 more)
Docs/: Installation.md  Installation_Linux.md  Readme.md  Secure.md  architecture_NOVA-SCHOOL-0.1.5.html  business_NOVA-SCHOOL-0.1.5.html  code_intelligence_NOVA-SCHOOL-0.1.5.html  dsgvo_NOVA-SCHOOL-0.1.5.html  executive_summary_NOVA-SCHOOL-0.1.5.html  hardware_NOVA-SCHOOL-0.1.5.html
LIT/: README.md
Linux/: README.md  materialize_linux_project.py  nova_linux_launch.py  nova_linux_worker_launch.py  server_config.json.example  start_server.sh  start_worker.sh
docs/: Index.html  Installation_Linux.md  Secure.md  Service.md  ai_service.py.html  analysis_archive_builder.py.html  archive_utils.py.html  auth.py.html  code_runner.py.html  codedump_tools.py.html  collaboration.py.html  config.py.html  container_seccomp.py.html  curriculum.py.html  curriculum_catalog.py.html  curriculum_certificate_pdf.py.html  index.html  (+64 more)
(+35 files in other folders)
